# docs/everyshilling_openapi.yaml
@@ -135,11 +135,11 @@ paths:
         content:
           application/json:
             schema:
-               $ref: "#/components/schemas/Email"
+               $ref: "#/components/schemas/Phone"
 
       responses:
         '200':
-          description: A tokenized password reset login to be send to the user email address
+          description: A tokenized password reset login to be send to the phone
           content:
             application/json:
               schema:
@@ -327,6 +327,10 @@ components:
         phone:
           type: string
           description: User's phone number
+
+        password:
+          type: string
+          description: User's password
       required:
         - phone
 
@@ -349,3 +353,10 @@ components:
           type: string
           description: valid email
           example: john.doe@example.com
+    Phone:
+      type: object
+      properties:
+        email:
+          type: string
+          description: valid phone
+          example: +254702998282
